   Shouldn't affect players, but will affect hardcode hacks. See HACKING.184
   for more info. [MG]
 
Commands:
 * 'teach' now takes a /list switch, which lets it run an action list
   instead of a single command. [MG]
 * @include/local includes an attribute, but preserves q-registers and
   doesn't propagate @breaks. [MG]
   
Substitutions:
 * New %= substitution, which evaluates to the dbref/attribute currently
   being evaluated. Useful for coding things which loop. [MG]

Attributes:
 * Branch attributes now show the 'branch' attribute flag in lflags(). [MG]

Version 1.8.4 patchlevel 3                                 Mar 18,  2011

Events:
 * Event system added. Certain things can now trigger events using @config
   event_handler. See "help events" and "help event <type>". [GM]
 * dump events: dump`5min, dump`1min, dump`complete.
 * object events: object`create, object`destroy, object`move,
   object`rename, object`kill.
 * sql events: sql`connect, sql`disconnect.
 * signal events: signal`usr1, signal`usr2.
 * player events: player`create, player`fail, player`connect,
   player`disconnect, player`inactivity.
 * socket events: socket`connect, socket`disconnect
 * database events: db`dbck, db`purge, db`wcheck
 * Periodic system events like warnings checks and db consistency
   checks are now handled by a timed queue and integrated with
   softcode events. Local hackers: This involves changes to
   local.c. If you have no changes in local.c, just delete the file.
   Otherwise, see HACKING.184 for more info. [SW]

Commands:
 * @hook/override/inplace - You can now run softcode with the same priority
   as hardcode! [GM]
 * @lock (and all lock keys) now accepts NAME^<pattern> for matching against
   an object's name. [GM]
 * @mapsql passes row results to attributes. Suggested by Mercutio. [GM]
 * @dig now takes an optional garbage dbref argument to specify the new
   dbref. Suggested by Paige. [GM]