@@ -3179,6 +3179,46 @@ See also: @motd, @list, @listmotd
    the enactor or the Can_spoof power.
 
 See also: @emit, @pemit, @oemit, SPOOFING, NOSPOOF, CONTROL.
+& @retry
+  @retry <boolean>
+  @retry <boolean>=<arg1>[,...]
+
+  The @retry command restarts the current queue entry, enabling people to
+  loop their command without requiring a wait for the next queue entry.
+  It can be a little tricky to understand at first. It basically tells the
+  parser: "If <boolean> is true, then go back to the beginning." It can also
+  modify %0-%9 with the arguments passed to it. (<arg1>,...).
+
+  Please note: @retry only restarts the action list it is currently in.
+  If you have: "@break 1=@retry 1=hello", then the action list is only
+  "@retry 1=hello" - which would thus create an infinite loop.
+
+  Watch out for infinite loops! @retry does respect all the limits (cpu_limit,
+  function_invocation_limit, etc). But because @retry causes the queue parser
+  to repeat itself _without_ invoking a new function, it doesn't risk hitting
+  any issues other than infinite loops.
+
+  See 'help @retry2' for examples.
+
+See also: ACTION LISTS, BOOLEAN VALUES, @break, @include
+&@retry2
+  Example: 'while'
+  > &sing me=$sing *:say %0 bottles of beer! ; @retry gt(%0,0)=dec(%0) ;
+        say Go get some more!
+  > sing 3
+  You say, "3 bottles of beer!"
+  You say, "2 bottles of beer!"
+  You say, "1 bottles of beer!"
+  You say, "0 bottles of beer!"
+  You say, "Go get some more!"
+
+  Implementing a folding algorithm:
+  (Yes, I know lmath is better, but this is just an example! :D)
+
+  > &add me=$add *:@retry words(%0)=rest(%0),add(first(%0),0%1) ; think %1
+  > add 4 3 2 1
+  10
+
 & @restart
   @restart <object>
   @restart/all
